<resources>
    <!--RegisterActivity-->
    <string name="app_name">Završni rad</string>
    <string name="SplashActivityText">Dobrodošli!</string>
    <string name="HintPassword">Password</string>
    <string name="HintEmail">Email</string>
    <string name="ButtonLogin">log in</string>
    <string name="ButtonSignUpRegisterActivity">New User? sign up!</string>
    <string name="CheckBox">Remember me</string>
    <string name="tvForgotPassword">Forgot password?</string>

    <!--SignUpActivity-->
    <string name="tvSignUp">Sign up</string>
    <string name="HintUsernameSignUp">Username</string>
    <string name="HintPasswordSignUp">Password</string>
    <string name="HintEmailSignUp">Email</string>
    <string name="HintConfirmPassword">Confirm Password</string>
    <string name="ButtonSignUpActivity">sign up</string>
    <string name="tvAlreadySignUp">Already Sign Up? Log In</string>

    <!--ConnectFitbitActivity-->
    <string name="btn_connect">Connect</string>
    <string name="tv_ConnectFitbit">Do you want to connect your device with Fitbit Charge HR?</string>

    <!--CalculationActivity-->
    <string name="steps">Steps: </string>
    <string name="calories">Calories: </string>
    <string name="kilometers">Kilometers: </string>
    <string name="pazi_na_tezinu">Pazite na težinu!!!\nPokušajte ostvariti preporučene vrijednosti koraka, kalorija i kilometara tokom dana kako bi regulirali vašu težinu</string>
    <string name="tezine_je_dobra">Težina vam je unutar granice normale!\nPridržavajte se preporučenih vrijednosti koraka,kalorija i kilometara tokom dana kako biste spriječili pretilost</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <!-- Navigation Drawer menu labels -->

    <string name="nav_sync">Sync</string>
    <string name="nav_set_weight_and_height">Set weight and height</string>
    <string name="nav_logout">Log out</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Sync</item>
        <item>Set weight and height</item>
        <item>Log out</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

</resources>
